Enhance README with comprehensive application details
Added detailed documentation for the RAG application, including prerequisites, running instructions, example requests, logging, design decisions, verification checklist, and references.